[project]
name = "grpc-middleware"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "grpcio>=1.71.0",
  "protobuf>=5.26.1,<6.0.0",
]

[tool.ruff]
extend = "../pyproject.toml"

[dependency-groups]
dev = [
  "types-grpcio>=1.0.0.20250506",
]

[build-system]
requires = [
  "setuptools>=80.3.1",
]
build-backend = "setuptools.build_meta"
